# lista3/orderHistory-service/src/main/java/com/pwr/psiw/orderhistoryservice/utils/UpdateStatusRequest.java
@@ -1,0 +1,13 @@
+package com.pwr.psiw.orderhistoryservice.utils;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class UpdateStatusRequest {
+    private Long orderId;
+    private String status;
+}
